# Progra-1-v2.0

AddressLink/: AddressLink.cbp  AddressLink.depend  AddressLink.layout  main.cpp
AddressLink/include/: AddressLink.h  Node.h
AddressLink/src/: AddressLink.cpp  Node.cpp
Client/: Client.depend  Client.layout
DLinkedList/DLinkedList/: LinkedList.cbp  LinkedList.depend  LinkedList.layout  main.cpp
DLinkedList/dlinkedlist/include/: DLinkedList.h  DNode.h  LinkedList.h  Node.h
DLinkedList/dlinkedlist/src/: DLinkedList.cpp  DNode.cpp  LinkedList.cpp  Node.cpp
LinkedHeap/: LinkedHeap.cbp  LinkedHeap.depend  LinkedHeap.layout
LinkedHeap/include/: Block.h  Heap.h  LinkedList.h  Node.h
LinkedHeap/src/: Block.cpp  Heap.cpp  LinkedList.cpp  Node.cpp
Server2/: Server2.cbp  Server2.depend  Server2.layout  main.cpp
src/: CMakeLists.txt  main.cpp
src/MPointer/: MPointer.h
src/MPointerGC/: ListaMPointerGC.h  MPointerGC.cpp  MPointerGC.h
